Upload coverage reports

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -20,6 +20,9 @@ jobs:
         run: |
           cpanm --quiet --notest --installdeps .
       - name: Run tests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
           perl Makefile.PL
-          cover -test
+          cover -test -report coveralls
